# search-engine

./: CMakeLists.txt  ConverterJSON.cpp  README.md  main.cpp
include/: ConverterJSON.h
src/: ConverterJSON.cpp  main.cpp
